--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>GBF Raiders</title>
+	<title>MoaraGBF Raiders</title>
 	<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png">
 	<link id="favicon" rel="shortcut icon" type="image/png" href="/assets/misc/GBFRaidersIconv2.png" />
 	<link rel="manifest" href="/manifest.json">
