Added new Rise of the Beast raid boss
Added new Rise of the Beast raid boss

--- a/static/index.html
+++ b/static/index.html
@@ -269,9 +269,9 @@
 		<div id="news-message" class="ui message">
 			<i class="close icon"></i>
 			<div class="header">
-				News - 7/12/2018
+				News - 8/15/2020
 			</div>
-			<p>I fixed the issue causing a bad connection for most people, ended up being a mismanaged hostname on my server causing the Twitter response to fail.</p>
+			<p>Added new Rise of the Beast raid boss.</p>
 		</div>
 	</div>
 	<script src="utils/browsedetect.js"></script>
